clusters/crc-cryostat-ossm3/overlays/ossm3-member-namespaces/networkpolicy-allow-istio-system-spring-boot-demo2.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: istio-system
  namespace: spring-boot-demo2
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
  policyTypes:
    - Ingress
